; ModuleID = '/home/carl/AnghaBench/zfs/lib/libzfs/os/linux/extr_libzfs_sendrecv_os.c_libzfs_set_pipe_max.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libzfs/os/linux/extr_libzfs_sendrecv_os.c_libzfs_set_pipe_max.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"/proc/sys/fs/pipe-max-size\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"%lu\00", align 1
@F_GETPIPE_SZ = common dso_local global i32 0, align 4
@F_SETPIPE_SZ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @libzfs_set_pipe_max(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %6 = call i32* @fopen(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %32

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i64 @fscanf(i32* %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i64* %4)
  %12 = icmp sgt i64 %11, 0
  br i1 %12, label %13, label %29

13:                                               ; preds = %9
  %14 = load i32, i32* %2, align 4
  %15 = load i32, i32* @F_GETPIPE_SZ, align 4
  %16 = call i64 (i32, i32, ...) @fcntl(i32 %14, i32 %15)
  store i64 %16, i64* %5, align 8
  %17 = load i64, i64* %5, align 8
  %18 = icmp sgt i64 %17, 0
  br i1 %18, label %19, label %28

19:                                               ; preds = %13
  %20 = load i64, i64* %4, align 8
  %21 = load i64, i64* %5, align 8
  %22 = icmp ugt i64 %20, %21
  br i1 %22, label %23, label %28

23:                                               ; preds = %19
  %24 = load i32, i32* %2, align 4
  %25 = load i32, i32* @F_SETPIPE_SZ, align 4
  %26 = load i64, i64* %4, align 8
  %27 = call i64 (i32, i32, ...) @fcntl(i32 %24, i32 %25, i64 %26)
  br label %28

28:                                               ; preds = %23, %19, %13
  br label %29

29:                                               ; preds = %28, %9
  %30 = load i32*, i32** %3, align 8
  %31 = call i32 @fclose(i32* %30)
  br label %32

32:                                               ; preds = %29, %1
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i64 @fscanf(i32*, i8*, i64*) #1

declare dso_local i64 @fcntl(i32, i32, ...) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
